# ChangeLog for net-im/gaim-snpp
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-snpp/ChangeLog,v 1.18 2004/10/21 15:36:44 rizzo Exp $

  21 Oct 2004; Don Seiler <rizzo@gentoo.org> -gaim-snpp-0.6.1.ebuild,
  -gaim-snpp-0.7.1.ebuild, gaim-snpp-0.8.0.ebuild:
  Stable on x86, pruning old versions

*gaim-snpp-0.8.0 (19 Sep 2004)

  19 Sep 2004; Don Seiler <rizzo@gentoo.org> +gaim-snpp-0.8.0.ebuild:
  Version bump

  03 Sep 2004; Don Seiler <rizzo@gentoo.org> gaim-snpp-0.7.1.ebuild:
  Stable on x86

*gaim-snpp-0.7.1 (25 Aug 2004)

  25 Aug 2004; Don Seiler <rizzo@gentoo.org> +gaim-snpp-0.7.1.ebuild:
  Version bump

*gaim-snpp-0.6.1 (23 Jul 2004)

  23 Jul 2004; Don Seiler <rizzo@gentoo.org> +gaim-snpp-0.6.1.ebuild:
  Version bump

*gaim-snpp-0.6.0 (16 Jul 2004)

  16 Jul 2004; Don Seiler <rizzo@gentoo.org> +gaim-snpp-0.6.0.ebuild:
  Version bump

  28 Jun 2004; Don Seiler <rizzo@gentoo.org> -gaim-snpp-0.1.0.ebuild,
  -gaim-snpp-0.4.0.ebuild:
  Removing old files for gaim pruning

*gaim-snpp-0.5.0 (24 Jun 2004)

  24 Jun 2004; Don Seiler <rizzo@gentoo.org> +gaim-snpp-0.5.0.ebuild:
  Version bump

*gaim-snpp-0.4.0 (30 May 2004)

  30 May 2004; Don Seiler <rizzo@gentoo.org>; +gaim-snpp-0.4.0.ebuild:
  Version bump

  29 Apr 2004; Don Seiler <rizzo@gentoo.org>; gaim-snpp-0.3.0.ebuild:
  Marking stable on x86

  27 Apr 2004; Don Seiler <rizzo@gentoo.org>; -gaim-snpp-0.2.0.ebuild:
  Removing obsolete version

  25 Apr 2004; David Holm <dholm@gentoo.org> gaim-snpp-0.3.0.ebuild:
  Added to ~ppc.

*gaim-snpp-0.3.0 (22 Apr 2004)

  22 Apr 2004; Don Seiler <rizzo@gentoo.org>; +gaim-snpp-0.3.0.ebuild:
  Version bump

*gaim-snpp-0.2.0 (02 Apr 2004)

  02 Apr 2004; Don Seiler <rizzo@gentoo.org>; gaim-snpp-0.2.0.ebuild:
  Version bump

  29 Mar 2004; Don Seiler <rizzo@gentoo.org>; gaim-snpp-0.1.0_beta.ebuild:
  Removing obsoleteness

*gaim-snpp-0.1.0 (29 Mar 2004)
