@@ -1,4 +1,4 @@
-MD5 5d049c1b120110edb1a87251da400b32 ChangeLog 2180
-MD5 96f6911d571645e1de6ad01ff33cac79 gaim-snpp-0.8.0.ebuild 627
+MD5 f96e5c538481d88860f01a079f1211ab ChangeLog 2269
 MD5 a2cde0bdf1d687c8cfcafe500daa018e metadata.xml 473
+MD5 f529cef480d46c1db396ff97c15bddd0 gaim-snpp-0.8.0.ebuild 634
 MD5 6197af66a1a89a1cf327056548e2dcff files/digest-gaim-snpp-0.8.0 67
