@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gaim-snpp
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-snpp/ChangeLog,v 1.18 2004/10/21 15:36:44 rizzo Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim-snpp/ChangeLog,v 1.19 2005/02/21 21:51:44 blubb Exp $
+
+  21 Feb 2005; Simon Stelling <blubb@gentoo.org> gaim-snpp-0.8.0.ebuild:
+  added ~amd64
 
   21 Oct 2004; Don Seiler <rizzo@gentoo.org> -gaim-snpp-0.6.1.ebuild,
   -gaim-snpp-0.7.1.ebuild, gaim-snpp-0.8.0.ebuild:
